// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Should compile many-row output with mapped aliases 1`] = `
"import { execute as __tsqlExecute } from "tsql/adapters/bun-sqlite";
import { User } from "./";

type QueryProps = { id: string; };

export default async function execGetUsersQuery({ id }: QueryProps): Promise<QueryOutput> {
    const query = \`SELECT u.id AS "users[].id", u.email AS "users[].email" FROM users u
WHERE u.id = ?;\`;
    const params = [id];
    const output = await __tsqlExecute(query, params, { queryName: "getUsers", sourceFile: "getUsers" });
    const rows: Record<string, unknown>[] = output.rows as Record<string, unknown>[];
    const mappings = [
            { aliasKey: "users[].id", targetPath: ["id"] },
            { aliasKey: "users[].email", targetPath: ["email"] },
        ] as const;
    const users: QueryOutput = [];
    for (const row of rows) {
        const value = {} as QueryOutput[number];
        for (const mapping of mappings) {
            let current: Record<string, any> = value as Record<string, any>;
            const path = mapping.targetPath;
            for (let i = 0; i < path.length - 1; i++) {
                const key = path[i]!;
                const existing = current[key];
                if (typeof existing !== "object" || existing === null || Array.isArray(existing)) {
                    current[key] = {};
                }

                current = current[key] as Record<string, any>;
            }

            current[path[path.length - 1]!] = row[mapping.aliasKey];
        }

        users.push(value);
    }

    return users;
}

type QueryOutput = User[];"
`;

exports[`Should compile single-row output with mapped aliases 1`] = `
"import { execute as __tsqlExecute } from "tsql/adapters/bun-sqlite";
import { User } from "./";

type QueryProps = { id: string; };

export default async function execGetUserQuery({ id }: QueryProps): Promise<QueryOutput> {
    const query = \`SELECT u.id AS "user.id", u.email AS "user.email" FROM users u
WHERE u.id = ?;\`;
    const params = [id];
    const output = await __tsqlExecute(query, params, { queryName: "getUser", sourceFile: "getUser" });
    const rows: Record<string, unknown>[] = output.rows as Record<string, unknown>[];
    const mappings = [
            { aliasKey: "user.id", targetPath: ["id"] },
            { aliasKey: "user.email", targetPath: ["email"] },
        ] as const;
    if (rows.length !== 1) {
        throw new Error("Expected exactly one row for user, got " + rows.length);
    }

    const value = {} as QueryOutput;
    const row = rows[0]!;
    for (const mapping of mappings) {
        let current: Record<string, any> = value as Record<string, any>;
        const path = mapping.targetPath;
        for (let i = 0; i < path.length - 1; i++) {
            const key = path[i]!;
            const existing = current[key];
            if (typeof existing !== "object" || existing === null || Array.isArray(existing)) {
                current[key] = {};
            }

            current = current[key] as Record<string, any>;
        }

        current[path[path.length - 1]!] = row[mapping.aliasKey];
    }

    return value;
}

type QueryOutput = User;"
`;

exports[`Should compile mutation without output declaration 1`] = `
"import { execute as __tsqlExecute } from "tsql/adapters/bun-sqlite";

type QueryProps = { id: string; };

export default async function execUpdateUserQuery({ id }: QueryProps): Promise<void> {
    const query = \`UPDATE users SET last_login = CURRENT_TIMESTAMP WHERE id = ?;\`;
    const params = [id];
    await __tsqlExecute(query, params, { queryName: "updateUser", sourceFile: "updateUser" });
    return;
}"
`;
